syntax = "proto3";
package icine;
option go_package = "/icine";

service Greeter {
    rpc SayHello (HelloReq) returns (HelloResp){};
}

message HelloReq{
    string name=1;
}

message HelloResp{
    string msg=1;
}